- more work done on project management: * very basic and awfully hackish, but saving to dropbox & localstorage both work * still issues with the fact that a project actually represents a folder + metadata * for now there are still too big discrepancies between the way localstorage & dropbox backbone plugins handle things
- modified modalRegion & related css for extra size

--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -323,6 +323,11 @@ body {
     width: 750px;
     margin-left: -370px;
 }
+
+.modal-reallyBig {
+    width: 1024px;
+    margin-left: -502px;
+}
 /*
 .bbf-field .bbf-editor {
     margin-left: 40%;
